
	* allPerms, doAllPerms: now correctly work in presence of blocks,
	and where there are no plots.

	`allPerms` now includes the permutation design (its `control`
	argument) as an attribute, `"control"`, on the returned matrix of
	permutations.

	`summary.allPerms` (its `print` method, more correctly) now prints
	the permutation design alongside the set of permutations.

	* Documentation fixes in examples of `allPerms` and `check`.

	* permuplot: This is horribly broken and I'm not sure if it will
	ever return. In the meantime, this function now prints a warning
	message if used and returns nothing, invisibly.

	The function is no longer exported from the package namespace, and
	not documented.

	I'm not convinced that the plot can adequately convery the breadth of
	designs now possible. Hence I am minded to deprecate this in 0.8-0
	when released to CRAN and to make it defunct some thereafter.

Version 0.7-4

	* Deprecated functions: Completed the deprecation of `permCheck()`
	and `permControl()`. These functions will be made defunct following
	the release of version 0.8-0, with a view to complete removal from
	version 0.9-0 onwards.

Version 0.7-3

	* Tweak to 0.7-2 API changes: argument `blocks` no longer takes
	a list from helper function `Blocks()`. It is easier and simpler
	if this just takes a factor. In essence, `blocks` in synonymous
	with `strata` from `vegan::permuted.index` and the new change will
	allow for an easier transition.

	* get-methods: New extractor functions `getMirror()`, and
	`getConstant()` which retrieve the mirroring and constant elements
	of a permutation design.

	Also added `getRow()`, `getCol()` and `getDim()`, which extract
	the row and column dimensions of a grid permutation design, or
	both.

	In addition, new methods `getNperm()` and `getMaxperm()` return
	the number of permutations requested and the maximum nuber that
	should be allowed, respectively. New method `getComplete` extracts